# cpputest_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/module/: internal.c  internal.h  module.c  module.h
ut/: CMakeLists.txt  module_test.cpp
ut/mocks/: mocks.cpp
